# ScalarDudleyAcceleration

BufferOverlay/: .gitignore  compile_commands.json  copy_kernel.cpp  copy_kernel.h  copy_tb.cpp  gen_test_data.py  hls_config.cfg  vitis-comp.json
BufferOverlay/.cache/clangd/index/: copy_kernel.cpp.72DF5B560C4BC561.idx  copy_kernel.h.34D6230CE658F6E4.idx  copy_tb.cpp.6A0BD1F9E6B30F75.idx
ScalarDudleyPython/: .gitignore  NL_functions.py  pyproject.toml  scalar_nlse.py
_ide/: .peers.ini  .vitisPlatformRepo.json  version.ini  workspace_journal.py  workspace_journal_20036.py
